<resources>
    <string name="app_name">Telugu Churches</string>
    <string name="DEVELOPER_KEY">AIzaSyDt4waoZKSYTWq7b34qUwMW6Nc7dWlEZAw</string>
    <string name="google_maps_key">AIzaSyBt-xSvDLNr1FBcypFJcRv1m5u3pgITAmo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="userinfo_str">Profile information</string>
    <string name="settings_str">Settings</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="username">User Name * </string>
    <string name="author_username">User Name</string>
    <string name="password">Password * </string>
    <string name="login">Login</string>
    <string name="change_password">Change Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register">Don’t have an Account?</string>
    <string name="please_login">Please Login</string>
    <string name="err_please_enter_username">Please enter username</string>
    <string name="err_please_enter_password">Please enter password</string>
    <string name="err_please_enter_mobile_number">Please enter mobile number</string>
    <string name="err_please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="err_please_enter_old_password">Please enter old password</string>
    <string name="err_please_enter_new_password">Please enter new password</string>
    <string name="password_must_contain_onecharacter">Password should contain one upperCase,
        one lowercase, one special character, one numeric and minimum Of 8 characters</string>
    <string name="err_please_enter_confirm_password">Please enter confirm password</string>
    <string name="err_password_do_not_match">Password do not match</string>
    <string name="full_name_profile">Full Name * </string>
    <string name="first_name">First Name * </string>
    <string name="middle_name">Middle Name (Optional)</string>
    <string name="last_name">Last Name * </string>
    <string name="email">Email * </string>
    <string name="email_str">Email</string>
    <string name="mobile_number">Mobile Number * </string>
    <string name="mobile_number_event">Mobile Number</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="event_date">Event Date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="confirm_password">Confirm Password * </string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an Account?</string>
    <string name="signup">Signup</string>
    <string name="registration">Registration</string>
    <string name="err_please_enter_first_name">Please enter first name</string>
    <string name="err_please_enter_last_name">Please enter last name</string>
    <string name="err_please_enter_email">Please enter email</string>
    <string name="err_please_enter_valid_email">Please enter valid email</string>
    <string name="change_photo">Change photo</string>
    <string name="personal_details">Personal Details</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="select_file">Select Resume</string>
    <string name="select">Select</string>
    <string name="add_Documents">Add Resume</string>
    <string name="currentDir">Current Directory</string>
    <string name="folder">Folder</string>
    <string name="fileSize">FileSize</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="err_please_enter_atleast_6characters">Please enter atLeast 6 characters</string>
    <string name="err_please_select_gender">Please select Gender</string>
    <string name="err_please_enter_dob">Please enter date of birth</string>
    <string name="languages">Languages</string>
    <string name="telugu_str">Telugu(తెలుగు)</string>
    <string name="english_str">English</string>
    <string name="profile_str">Profile</string>
    <string name="edit_profile_str">Edit Profile</string>
    <string name="signup_str">SignUp</string>
    <string name="logout_str">Logout</string>
    <string name="choose_language_str">Choose Language(భాషను ఎంచుకోండి)</string>
    <string name="gender_title">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_records_found">No Records Found. Please try with another Keyword</string>
    <string name="no_records">No Records Found.</string>
    <string name="no_records_church">No Churches Found.</string>
    <string name="no_records_author">No Pastors Found.</string>
    <string name="no_records_pastor">No Pastors Found.</string>
    <string name="no_records_events">No Events Found.</string>
    <string name="no_records_posts">No Posts Found.</string>
    <string name="no_records_careers">No Careers Found.</string>
    <string name="no_notifications">No Notifications Found.</string>
    <string name="no_records_items">No Items Found.</string>
    <string name="confirmation">Confirmation</string>
    <string name="success">Success</string>
    <string name="alert_logout">Are you sure you want to Logout?</string>
    <string name="holy_bible_title">Holy Bible</string>
    <string name="audio_bible_title">Audio Bible</string>
    <string name="bible_study_title">Bible Study</string>
    <string name="songs">Songs</string>
    <string name="scientific_proofs_title">Scientific Proofs</string>
    <string name="gospel_message_title">Gospel messages</string>
    <string name="short_message_title">Short messages</string>
    <string name="images_title">Images</string>
    <string name="login_id_title">Login id creation</string>
    <string name="help_title">Help</string>
    <string name="book_shop_title">Book shop</string>
    <string name="movie_title">Movies</string>
    <string name="daily_quotation_title">Daily Quotations</string>
    <string name="video_songs_title">Video songs</string>
    <string name="testimonials_title">Testimonials</string>
    <string name="quotation_title">Quotations</string>
    <string name="sunday_school_title">Sunday school</string>
    <string name="daily_message_title">Daily messages</string>
    <string name="bible_app_title">Bible Apps</string>
    <string name="short_film_title">Short films</string>
    <string name="jobs_title">Jobs</string>
    <string name="map_title">Map</string>
    <string name="event_title">Events</string>
    <string name="donation_title">Donation</string>
    <string name="live_title">Live</string>
    <string name="doubt_title">Doubts</string>
    <string name="suggestion_title">Suggestions</string>
    <string name="pamphlets_title">Pamphlets</string>
    <string name="language_title">Languages</string>
    <string name="admin_title">Pastor</string>
    <string name="address_select">Please select Address</string>
    <string name="toast_camera">Camera permission granted</string>
    <string name="toast_camera_denied">Camera permission denied</string>
    <string name="author_title">Pastors</string>
    <string name="old_password">Old Password * </string>
    <string name="new_password">New Password * </string>
    <string name="events">Events</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="ok">Ok</string>
    <string name="all_churches"> Churches</string>
    <string name="search_title">Search by Church Name, Event Name</string>
    <string-array name="categories">
        <item>@string/holy_bible_title</item>
        <item>@string/audio_bible_title</item>
        <item>@string/bible_study_title</item>
        <item>@string/songs</item>
        <item>@string/scientific_proofs_title</item>
        <item>@string/gospel_message_title</item>
        <item>@string/short_message_title</item>
        <item>@string/images_title</item>
        <item>@string/login_id_title</item>
        <item>@string/help_title</item>
        <item>@string/book_shop_title</item>
        <item>@string/movie_title</item>
        <item>@string/daily_quotation_title</item>
        <item>@string/video_songs_title</item>
        <item>@string/testimonials_title</item>
        <item>@string/quotation_title</item>
        <item>@string/sunday_school_title</item>
        <item>@string/daily_message_title</item>
        <item>@string/bible_app_title</item>
        <item>@string/short_film_title</item>
        <item>@string/jobs_title</item>
        <item>@string/map_title</item>
        <item>@string/event_title</item>
        <item>@string/donation_title</item>
        <item>@string/live_title</item>
        <item>@string/doubt_title</item>
        <item>@string/suggestion_title</item>
        <item>@string/pamphlets_title</item>
        <item>@string/language_title</item>
        <item>@string/admin_title</item>

    </string-array>
    <string name="churches">Churches</string>
    <string name="upcoming_events_home">Upcoming events</string>
    <string name="holy_telugu">Holy Bible - Telugu</string>
    <string name="holy_english">Holy Bible - English</string>
    <string name="audioplayer">Audio Player</string>
    <string name="up_coming_events">Upcoming Events</string>
    <string name="all_events">All Events</string>
    <string name="church_name">Church Name</string>
    <string name="church_names">Church Name</string>
    <string name="church">Church</string>
    <string name="author_name">Pastor Name</string>
    <string name="author_names">Pastor Name:</string>
    <string name="event_name">Event Name</string>
    <string name="event_names">Event Name</string>
    <string name="event_from">Event From</string>
    <string name="event_to">Event To</string>
    <string name="contact_number1">Contact Number</string>
    <string name="contact_email">Email id</string>
    <string name="contact_address">Address</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="register_church">Registration Number</string>
    <string name="name_church">Name</string>
    <string name="subscribe">Subscribe</string>
    <string name="un_subscribe">Unsubscribe</string>
    <string name="description_church">Description</string>
    <string name="vision_church">Vision</string>
    <string name="mission_church">Mission</string>
    <string name="address_church">Address</string>
    <string name="email_church">Email</string>
    <string name="email_pastor">Pastor email</string>
    <string name="web_address_church">Web address</string>
    <string name="landmark_church">Landmark</string>
    <string name="state_church">State</string>
    <string name="district_church">District</string>
    <string name="mandal_church">Mandal</string>
    <string name="please_login_to_like">Please login to like</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="notifications">Notifications</string>
    <string name="careers">Careers</string>
    <string name="online_shopping">Online Shopping</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="checkout">Checkout</string>
    <string name="help">Help</string>
    <string name="comments">Comments</string>
    <string name="add_a_public_comment">Add a public comment…</string>
    <string name="delete_comment_permanently">Delete comment permanently</string>
    <string name="pastors_title">Pastors</string>
    <string name="contact">Contact Us</string>
    <string name="products">Products</string>
    <string name="products_sale_is_not_yet_statrted_please_wait_for_next_update">Products sale is not yet statrted...\nPlease wait for next Update...</string>
</resources>