<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:text="@string/delete_comment"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialogMessage"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/delete_comment_permanently"
            android:textColor="@color/black" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/messageText"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_home"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_home"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>