<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titleLay"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="2dp"
        android:background="@drawable/rectanle_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/passwrdLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLay"
        android:layout_margin="5dp"
        android:visibility="visible">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/oldPasswordEdtLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/oldPasswordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="25"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.Design.Hint"
            android:layout_below="@+id/oldPasswordEdtLay"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/newPasswordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="25"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newPasswordInput"
            android:layout_centerInParent="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirmPasswordEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="25"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/confirmPasswordInput"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_background_home"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/confirmPasswordInput"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:background="@drawable/btn_background_home"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</RelativeLayout>