<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main_lty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:text="@string/products"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/text_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialogMessage"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:padding="@dimen/margin_5"
            android:text="@string/products_sale_is_not_yet_statrted_please_wait_for_next_update"
            />
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_below="@+id/text_item"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_background_home"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>






</RelativeLayout>