<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <android.support.v7.widget.RecyclerView
        android:id="@+id/notificationRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLay" />

    <TextView
        android:id="@+id/no_items_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_notifications"
       android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/btnLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectanle_bg"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/continueShoppingBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectanle_bg"
            android:text="@string/continue_shopping"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/white" />


        <Button
            android:id="@+id/checkOutBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectanle_bg"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
