<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/dialogMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:maxLines="10"
            android:padding="10dip"
            android:background="@color/colorPrimary"
            android:scrollbars="vertical"
            android:text="@string/please_login_to_like"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialogMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_home"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background_home"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>